<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredient_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="@dimen/default_padding"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/add_to_widget_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add to Widget" />
            <TextView
                android:id="@+id/added_to_widget_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Added to Widget"
                android:visibility="invisible" />
        </FrameLayout>

        <Button
            android:id="@+id/steps_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="Steps" />

    </LinearLayout>
</LinearLayout>