<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/default_margin"
    android:layout_marginRight="@dimen/default_margin"
    android:layout_marginTop="@dimen/default_margin"
    android:id="@+id/steps_recycler_view"
    xmlns:android="http://schemas.android.com/apk/res/android" />


